--- a/templates/index.html
+++ b/templates/index.html
@@ -4,69 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPCITIES</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"
-        }
-
-        .container {
-            max-width: 1600px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .header {
-            text-align: right;
-            padding: 10px;
-            height: 64px;
-        }
-
-        .header img {
-            height: 100%;
-            width: auto;
-        }
-
-        .btn-login {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            cursor: pointer;
-            margin-left: 20px;
-        }
-
-        .user-profile {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-        }
-
-        .user-profile img {
-            height: 40px;
-            width: auto;
-            margin-left: 20px;
-        }
-
-        @media screen and (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-
-            .header {
-                text-align: center;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="../static/style.css">
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
-
-<div class="container">
+<script src="../static/index.js" type="text/babel"></script>
+<div class="container" id="app" is-authed={{ is_authed }}>
     <div class="header">
         {% if is_authed %}
             <div class="user-profile">
@@ -85,6 +30,12 @@
         {% endif %}
     </div>
     {% if is_authed %}
+        <h1>https://t.me/lairofquaks</h1>
+        <h1>https://t.me/lairofquaks</h1>
+        <h1>https://t.me/lairofquaks</h1>
+        <h1>https://t.me/lairofquaks</h1>
+        <h1>https://t.me/lairofquaks</h1>
+        <h1>https://t.me/lairofquaks</h1>
         <h1>Добро пожаловать, {{ name }}</h1>
         <p>Как дела?</p>
     {% else %}
@@ -97,6 +48,7 @@
     function deleteCookieAndReload(cookieName) {
         document.cookie = cookieName + "=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
         location.reload();
+        console.log({{ is_authed }})
     }
 </script>
 
